Sending current stuff before concentrate on working on Node knowing NodeTree solution

--- a/GlobalCode/PagedMultiviewTreeControl/MultiView.vcxproj.filters
+++ b/GlobalCode/PagedMultiviewTreeControl/MultiView.vcxproj.filters
@@ -78,6 +78,18 @@
     <ClCompile Include="TreePage.cpp">
       <Filter>MultiView</Filter>
     </ClCompile>
+    <ClCompile Include="..\GlobalCode_NodeTrees\TagPosition.cpp">
+      <Filter>Header Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\GlobalCode_NodeTrees\VariableData.cpp">
+      <Filter>Header Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\GlobalCode_NodeTrees\XMLOption.cpp">
+      <Filter>Header Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\GlobalCode_NodeTrees\TagNodeTreeTemplate.cpp">
+      <Filter>Header Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Resource.h">
@@ -164,9 +176,6 @@
     <ClInclude Include="$(CPPSource)\GlobalCode_IniData\IndexedPDictionary.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\MultiPlatformGlobalCode\GlobalCode\DLLAPI.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="BasicMultiviewTemplate.h">
       <Filter>MultiView</Filter>
     </ClInclude>
@@ -199,6 +208,30 @@
     </ClInclude>
     <ClInclude Include="TreePage.h">
       <Filter>MultiView</Filter>
+    </ClInclude>
+    <ClInclude Include="$(CPPSource)\DLLAPI.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\GlobalCode_NodeTrees\VariableData.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\GlobalCode_NodeTrees\XMLOption.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\GlobalCode_NodeTrees\XMLTagTree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\GlobalCode_NodeTrees\LooseNodeTreeTemplate.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\GlobalCode_NodeTrees\TagNodeTreeTemplate.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\GlobalCode_NodeTrees\TagPosition.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\VirtualType.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
