--- a/GlobalCode/PagedMultiviewTreeControl/MultiView.vcxproj
+++ b/GlobalCode/PagedMultiviewTreeControl/MultiView.vcxproj
@@ -319,6 +319,10 @@
     <ClCompile Include="$(CPPSource)\GlobalCode_VariableLists\VariableVectorFunctions.cpp">
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="..\GlobalCode_NodeTrees\TagNodeTreeTemplate.cpp" />
+    <ClCompile Include="..\GlobalCode_NodeTrees\TagPosition.cpp" />
+    <ClCompile Include="..\GlobalCode_NodeTrees\VariableData.cpp" />
+    <ClCompile Include="..\GlobalCode_NodeTrees\XMLOption.cpp" />
     <ClCompile Include="ContextMenu.cpp" />
     <ClCompile Include="DLG_TreeNodeText.cpp" />
     <ClCompile Include="TreeCtrlPage.cpp" />
@@ -346,6 +350,13 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClInclude Include="$(CPPSource)\GlobalCode_ExperimentalCode\MediumDec.h" />
+    <ClInclude Include="..\GlobalCode_NodeTrees\LooseNodeTreeTemplate.h" />
+    <ClInclude Include="..\GlobalCode_NodeTrees\TagNodeTreeTemplate.h" />
+    <ClInclude Include="..\GlobalCode_NodeTrees\TagPosition.h" />
+    <ClInclude Include="..\GlobalCode_NodeTrees\VariableData.h" />
+    <ClInclude Include="..\GlobalCode_NodeTrees\XMLOption.h" />
+    <ClInclude Include="..\GlobalCode_NodeTrees\XMLTagTree.h" />
+    <ClInclude Include="..\VirtualType.h" />
     <ClInclude Include="ContextMenu.h" />
     <ClInclude Include="CustomTreeCtrl.h" />
     <ClInclude Include="CustomTreeView.h" />
