--- a/GlobalCode/CustomDecTester.vcxproj
+++ b/GlobalCode/CustomDecTester.vcxproj
@@ -207,6 +207,19 @@
     <ClInclude Include="$(CPPSource)\PagedMultiviewTreeControl\TemplateMacros.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GlobalCode_ExperimentalCode\VirtualType.h" />
+    <ClInclude Include="PagedMultiviewTreeControl\CustomTreeNode.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">false</DeploymentContent>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</DeploymentContent>
+    </ClInclude>
+    <ClInclude Include="PagedMultiviewTreeControl\CustomTreeView.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">false</DeploymentContent>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</DeploymentContent>
+    </ClInclude>
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
