added more potential code for storing type

--- a/BlazesCPPCLRGlobalCode/BlazesCPPCLRGlobalCode.vcxproj.filters
+++ b/BlazesCPPCLRGlobalCode/BlazesCPPCLRGlobalCode.vcxproj.filters
@@ -135,6 +135,9 @@
     <ClInclude Include="..\GlobalCode\VirtualType.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\GlobalCode\GlobalCode_ExperimentalCode\ConvertableP.h">
+      <Filter>Header Files\GlobalCode_ExperimentalCode</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BlazesCPPCLRGlobalCode.cpp">
