--- a/BlazesCPPCLRGlobalCode/BlazesCPPCLRGlobalCode.vcxproj
+++ b/BlazesCPPCLRGlobalCode/BlazesCPPCLRGlobalCode.vcxproj
@@ -136,6 +136,7 @@
     <ClInclude Include="..\GlobalCode\DLLAPI.h" />
     <ClInclude Include="..\GlobalCode\GlobalCode_ExperimentalCode\BufferedVariable.h" />
     <ClInclude Include="..\GlobalCode\GlobalCode_ExperimentalCode\BufferedVariableArray.h" />
+    <ClInclude Include="..\GlobalCode\GlobalCode_ExperimentalCode\ConvertableP.h" />
     <ClInclude Include="..\GlobalCode\GlobalCode_ExperimentalCode\CustomDec.h" />
     <ClInclude Include="..\GlobalCode\GlobalCode_ExperimentalCode\MediumDec.h" />
     <ClInclude Include="..\GlobalCode\GlobalCode_ExperimentalCode\SuperDecHex.h" />
