--- a/.gitignore
+++ b/.gitignore
@@ -198,4 +198,5 @@ GlobalCode/HkBasedCode/HkClassUsageTree.cpp
 GlobalCode/HkBasedCode/HkClassUsageTree.h
 GlobalCode/luple/
 !GlobalCode/luple/README.md
+!GlobalCode/luple/luple.h
 !GlobalCode/luple/type-loophole.h
