place https://github.com/alexpolt/luple
use github to place
https://github.com/alexpolt/luple
inside GlobalCode/luple  folder (with files of exactly GlobalCode/luple/luple.h and GlobalCode/luple/type-loophole.h)

--- a/BlazesCPPCLRGlobalCode/BlazesCPPCLRGlobalCode.vcxproj.filters
+++ b/BlazesCPPCLRGlobalCode/BlazesCPPCLRGlobalCode.vcxproj.filters
@@ -37,6 +37,9 @@
     <Filter Include="Header Files\GlobalCode_VariableConversionFunctions">
       <UniqueIdentifier>{21d9dfef-1edb-43e5-8e5e-8a3f42b89735}</UniqueIdentifier>
     </Filter>
+    <Filter Include="luple">
+      <UniqueIdentifier>{0706e7ca-c3fc-4ad3-8a63-1c16834ec2ce}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BlazesCPPCLRGlobalCode.h">
