Adjusted Runtime Code to be closer to afx default versions
Compilation with addition of CRuntimeClass to TreePage is successful

--- a/GlobalCode/PagedMultiviewTreeControl/MultiView.vcxproj
+++ b/GlobalCode/PagedMultiviewTreeControl/MultiView.vcxproj
@@ -361,6 +361,7 @@
     <ClInclude Include="TreeCtrlPage.h" />
     <ClInclude Include="TreePage.h" />
     <ClInclude Include="TreePageNode.h" />
+    <ClInclude Include="WP_APPDefines.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(CPPSource)\DLLAPI.h" />
